--- a/cac-cap-do.html
+++ b/cac-cap-do.html
@@ -23,60 +23,72 @@
 
 
 
-  <section class="hero-mini">
-    <div class="container">
-      <div class="banner"><div class="overlay"></div><div class="title">Các cấp độ nhận thức</div></div>
-      <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Các cấp độ nhận thức</div>
+<section class="hero-mini">
+  <div class="container">
+    <div class="banner"><div class="overlay"></div><div class="title">Những tầng bậc của nhận thức</div></div>
+    <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Những tầng bậc của nhận thức</div>
 
-      <div class="detail-layout">
-        <aside class="toc">
-          <h4>Nội dung</h4>
-          <a href="#truc-quan">Trực quan sinh động</a>
-          <a href="#tu-duy">Tư duy trừu tượng</a>
-          <a href="#con-duong">Con đường biện chứng</a>
-          <a href="#loi">Lỗi thường gặp</a>
-        </aside>
+    <div class="detail-layout">
+      <aside class="toc">
+        <h4>Nội dung</h4>
+        <a href="#truc-quan">Nhận thức trực quan</a>
+        <a href="#tu-duy">Nhận thức lý tính</a>
+        <a href="#con-duong">Tiến trình biện chứng</a>
+        <a href="#loi">Những lệch lạc phổ biến</a>
+      </aside>
 
-        <main class="prose">
-          <section id="truc-quan">
-            <h2>Trực quan sinh động</h2>
-            <p>Phản ánh cảm tính gồm <strong>cảm giác</strong>, <strong>tri giác</strong>, <strong>biểu tượng</strong>. Cấp độ này giúp con người tiếp cận thế giới hiện tượng, tạo dữ liệu đầu vào cho tư duy.</p>
-            <ul>
-              <li><strong>Cảm giác:</strong> phản ánh thuộc tính đơn lẻ như màu, âm, nhiệt.</li>
-              <li><strong>Tri giác:</strong> tổng hợp nhiều cảm giác, tạo hình ảnh tương đối toàn vẹn.</li>
-              <li><strong>Biểu tượng:</strong> hình ảnh còn lưu khi đối tượng không trực tiếp tác động.</li>
-            </ul>
-          </section>
+      <main class="prose">
+        <section id="truc-quan">
+          <h2>Nhận thức trực quan</h2>
+          <p>Nhận thức cảm tính bao gồm <strong>cảm giác</strong>, <strong>tri giác</strong> và <strong>biểu tượng</strong>.
+            Đây là cấp độ giúp con người tiếp xúc trực tiếp với các hiện tượng, cung cấp chất liệu ban đầu cho hoạt động
+            tư duy.</p>
+          <ul>
+            <li><strong>Cảm giác:</strong> phản ánh những thuộc tính riêng lẻ như màu sắc, âm thanh, nhiệt độ.</li>
+            <li><strong>Tri giác:</strong> sự kết hợp các cảm giác, hình thành hình ảnh tương đối hoàn chỉnh về sự vật.
+            </li>
+            <li><strong>Biểu tượng:</strong> hình ảnh được ghi nhớ và tái hiện khi đối tượng không còn tác động trực
+              tiếp.</li>
+          </ul>
+        </section>
 
-          <section id="tu-duy">
-            <h2>Tư duy trừu tượng</h2>
-            <ul>
-              <li><strong>Khái niệm:</strong> nắm bắt dấu hiệu bản chất, tất nhiên.</li>
-              <li><strong>Phán đoán:</strong> liên kết khái niệm để khẳng định/phủ định.</li>
-              <li><strong>Suy lý:</strong> rút tri thức mới từ tri thức đã có (diễn dịch, quy nạp, mô hình hoá).</li>
-            </ul>
-          </section>
+        <section id="tu-duy">
+          <h2>Nhận thức lý tính</h2>
+          <ul>
+            <li><strong>Khái niệm:</strong> phản ánh những dấu hiệu cốt lõi, ổn định của sự vật và hiện tượng.</li>
+            <li><strong>Phán đoán:</strong> liên kết các khái niệm nhằm khẳng định hoặc phủ định một mối quan hệ.</li>
+            <li><strong>Suy luận:</strong> hình thành tri thức mới dựa trên tri thức đã có thông qua diễn dịch, quy nạp
+              hoặc mô hình hoá.</li>
+          </ul>
+        </section>
 
-          <section id="con-duong">
-            <h2>Con đường biện chứng</h2>
-            <p>Từ cảm tính → lý tính → <strong>trở lại thực tiễn</strong> để kiểm chứng, bổ sung, phát triển tri thức. Mỗi chu trình nâng tầm hiểu biết lên mức sâu sắc hơn.</p>
-          </section>
+        <section id="con-duong">
+          <h2>Tiến trình biện chứng</h2>
+          <p>Nhận thức phát triển theo con đường: từ cảm tính đến lý tính, sau đó <strong>quay trở lại thực tiễn</strong>
+            để kiểm nghiệm và hoàn thiện. Mỗi vòng lặp giúp tri thức đạt tới mức độ sâu sắc và chính xác hơn.</p>
+        </section>
 
-          <section id="loi">
-            <h2>Lỗi thường gặp</h2>
-            <div class="callout warn"><div class="hd">Cảnh báo</div>Tuyệt đối hoá một phía: chỉ cảm tính (kinh nghiệm luận) hoặc chỉ lý thuyết (giáo điều). Cần thống nhất biện chứng giữa hai cấp độ.</div>
-          </section>
-          <hr class="hr-soft" />
-          <a href="index.html" class="btn-primary">⬅ Quay lại</a>
-        </main>
-      </div>
+        <section id="loi">
+          <h2>Những lệch lạc phổ biến</h2>
+          <div class="callout warn">
+            <div class="hd">Cảnh báo</div>
+            Việc tuyệt đối hoá một phía — chỉ dựa vào kinh nghiệm cảm tính hoặc chỉ dựa vào lý thuyết trừu tượng — đều
+            dẫn đến sai lầm. Nhận thức đúng đắn đòi hỏi sự thống nhất biện chứng giữa hai cấp độ này.
+          </div>
+        </section>
 
-      <div class="pager">
-        <a href="vai-tro-thuc-tien.html">⬅ Vai trò của thực tiễn</a>
-        <a href="sai-lam.html">Sai lầm nhận thức ➜</a>
-      </div>
+        <hr class="hr-soft" />
+        <a href="index.html" class="btn-primary">⬅ Quay lại</a>
+      </main>
     </div>
-  </section>
+
+    <div class="pager">
+      <a href="vai-tro-thuc-tien.html">⬅ Vai trò của thực tiễn</a>
+      <a href="sai-lam.html">Sai lầm trong nhận thức ➜</a>
+    </div>
+  </div>
+</section>
+
 
 <!-- ĐÚNG (để Vite bundle) -->
 <script type="module" src="/src/assets/js/main.js"></script>
