--- a/khai-niem.html
+++ b/khai-niem.html
@@ -19,76 +19,94 @@
   </header>
 
   <section class="hero-mini">
-    <div class="container">
-      <div class="banner"><div class="overlay"></div><div class="title">Khái niệm nhận thức</div></div>
-      <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Khái niệm nhận thức</div>
+  <div class="container">
+    <div class="banner"><div class="overlay"></div><div class="title">Khái niệm về nhận thức</div></div>
+    <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Khái niệm về nhận thức</div>
 
-      <div class="detail-layout">
-        <aside class="toc" aria-label="Mục lục trang">
-          <h4>Nội dung</h4>
-          <a href="#dinh-nghia">Định nghĩa</a>
-          <a href="#dac-diem">Đặc điểm</a>
-          <a href="#cau-truc">Cấu trúc hoạt động</a>
-          <a href="#y-nghia">Ý nghĩa phương pháp luận</a>
-          <a href="#vi-du">Ví dụ minh hoạ</a>
-          <a href="#tai-lieu">Tài liệu tham khảo</a>
-        </aside>
+    <div class="detail-layout">
+      <aside class="toc" aria-label="Mục lục trang">
+        <h4>Nội dung</h4>
+        <a href="#dinh-nghia">Khái quát chung</a>
+        <a href="#dac-diem">Những đặc trưng cơ bản</a>
+        <a href="#cau-truc">Thành tố của hoạt động</a>
+        <a href="#y-nghia">Giá trị phương pháp luận</a>
+        <a href="#vi-du">Minh hoạ thực tiễn</a>
+      </aside>
 
-        <main class="prose">
-          <section id="dinh-nghia">
-            <h2>Định nghĩa</h2>
-            <p><strong>Nhận thức</strong> là quá trình phản ánh <em>hiện thực khách quan</em> vào bộ óc con người một cách <em>tích cực, chủ động và sáng tạo</em>, nhằm tạo ra tri thức đúng đắn chỉ đạo hoạt động thực tiễn. Tri thức không phải bản sao cơ học mà là sự tái cấu trúc thế giới trong tư duy trên cơ sở kinh nghiệm và phương pháp khoa học.</p>
-            <div class="quote">“Từ trực quan sinh động đến tư duy trừu tượng, và từ tư duy trừu tượng trở lại thực tiễn.”</div>
-          </section>
+      <main class="prose">
+        <section id="dinh-nghia">
+          <h2>Khái quát chung</h2>
+          <p><strong>Nhận thức</strong> là quá trình con người tiếp cận, phản ánh và hiểu biết <em>thế giới khách quan</em>
+            thông qua hoạt động thực tiễn, với sự tham gia <em>chủ động và sáng tạo</em> của tư duy. Tri thức hình thành
+            không phải sự sao chép đơn giản hiện thực, mà là kết quả của việc tổ chức, phân tích và khái quát hoá hiện
+            thực bằng phương pháp khoa học.</p>
+          <div class="quote">“Nhận thức vận động từ kinh nghiệm trực tiếp, vươn tới tư duy lý luận và quay trở lại kiểm
+            nghiệm trong thực tiễn.”</div>
+        </section>
 
-          <section id="dac-diem">
-            <h2>Đặc điểm</h2>
-            <ul>
-              <li><strong>Tính khách quan – chủ quan thống nhất:</strong> đối tượng tồn tại độc lập; song kết quả mang dấu ấn mục đích, kinh nghiệm, ngôn ngữ của chủ thể.</li>
-              <li><strong>Tính lịch sử – xã hội:</strong> tri thức chịu sự quy định của điều kiện vật chất, trình độ khoa học – kỹ thuật, bối cảnh văn hoá.</li>
-              <li><strong>Tính phát triển:</strong> từ chưa đầy đủ đến đầy đủ hơn; từ tương đối đến tiệm cận chân lý tuyệt đối.</li>
-            </ul>
-          </section>
+        <section id="dac-diem">
+          <h2>Những đặc trưng cơ bản</h2>
+          <ul>
+            <li><strong>Sự thống nhất giữa khách quan và chủ quan:</strong> hiện thực tồn tại độc lập, nhưng kết quả nhận
+              thức luôn chịu ảnh hưởng bởi mục đích, tri thức nền và điều kiện của chủ thể.</li>
+            <li><strong>Dấu ấn lịch sử – xã hội:</strong> tri thức phản ánh trình độ phát triển kinh tế, khoa học và môi
+              trường văn hoá của mỗi thời kỳ.</li>
+            <li><strong>Tính vận động và mở rộng:</strong> nhận thức không ngừng được điều chỉnh, bổ sung và tiến gần
+              hơn tới chân lý.</li>
+          </ul>
+        </section>
 
-          <section id="cau-truc">
-            <h2>Cấu trúc hoạt động</h2>
-            <ul>
-              <li><strong>Chủ thể:</strong> cá nhân/cộng đồng khoa học, với mục tiêu và hệ chuẩn.</li>
-              <li><strong>Đối tượng:</strong> sự vật, hiện tượng, quan hệ trong tự nhiên – xã hội.</li>
-              <li><strong>Phương tiện:</strong> ngôn ngữ, công cụ kỹ thuật, phương pháp luận (logic – biện chứng – mô hình hoá).</li>
-              <li><strong>Sản phẩm:</strong> tri thức (khái niệm, quy luật, lý thuyết, công nghệ).</li>
-            </ul>
-            <div class="callout info"><div class="hd">Gợi ý học tập</div>Luôn làm rõ: <em>đối tượng</em> là gì? <em>phương pháp</em> nào phù hợp? <em>kiểm chứng</em> ở đâu trong thực tiễn?</div>
-          </section>
+        <section id="cau-truc">
+          <h2>Thành tố của hoạt động</h2>
+          <ul>
+            <li><strong>Chủ thể:</strong> cá nhân hoặc tập thể tham gia nhận thức với mục đích và định hướng cụ thể.</li>
+            <li><strong>Đối tượng:</strong> các sự vật, hiện tượng và mối quan hệ trong tự nhiên và xã hội.</li>
+            <li><strong>Phương tiện:</strong> hệ thống khái niệm, ngôn ngữ, công cụ kỹ thuật và phương pháp nghiên cứu.
+            </li>
+            <li><strong>Kết quả:</strong> tri thức được thể hiện dưới dạng khái niệm, quy luật, học thuyết hoặc ứng
+              dụng.</li>
+          </ul>
+          <div class="callout info">
+            <div class="hd">Gợi ý học tập</div>
+            Khi phân tích một vấn đề, hãy xác định rõ: <em>đang nghiên cứu cái gì</em>, <em>dùng phương pháp nào</em> và
+            <em>kiểm chứng kết quả bằng thực tiễn ra sao</em>.
+          </div>
+        </section>
 
-          <section id="y-nghia">
-            <h2>Ý nghĩa phương pháp luận</h2>
-            <p>Nhận thức đúng đắn đòi hỏi thái độ khách quan, tư duy phản biện, kết hợp chặt chẽ giữa kinh nghiệm – lý luận – thực tiễn. Tránh hai cực đoan: kinh nghiệm luận hẹp hòi và giáo điều lý thuyết.</p>
-          </section>
+        <section id="y-nghia">
+          <h2>Giá trị phương pháp luận</h2>
+          <p>Hiểu đúng về nhận thức giúp hình thành thái độ tôn trọng khách quan, phát triển tư duy phản biện và gắn kết
+            chặt chẽ giữa lý luận với thực tiễn. Điều này góp phần tránh lối suy nghĩ phiến diện, duy kinh nghiệm hoặc
+            rập khuôn máy móc.</p>
+        </section>
 
-          <section id="vi-du">
-            <h2>Ví dụ minh hoạ</h2>
-            <p>Quan sát rơi tự do → đặt vấn đề về gia tốc → thiết kế thí nghiệm đo đạc → mô hình hoá &amp; tính toán → ứng dụng trong kỹ thuật. Chu trình khép kín giữa lý thuyết và thực hành.</p>
-          </section>
+        <section id="vi-du">
+          <h2>Minh hoạ thực tiễn</h2>
+          <p>Từ việc quan sát chuyển động rơi → đặt câu hỏi về nguyên nhân → xây dựng giả thuyết khoa học → tiến hành đo
+            đạc, thử nghiệm → ứng dụng kết quả vào sản xuất và kỹ thuật. Đây là quá trình tuần hoàn giữa nhận thức và
+            thực tiễn.</p>
+        </section>
 
-          <section id="tai-lieu">
-            <h2>Tài liệu tham khảo</h2>
-            <ul>
-              <li>Giáo trình Những nguyên lý cơ bản của CN Mác–Lênin (phần LLNT).</li>
-              <li>Lenin: <em>Bút ký triết học</em> (về con đường nhận thức).</li>
-            </ul>
-          </section>
-          <hr class="hr-soft" />
-          <a href="index.html" class="btn-primary">⬅ Quay lại</a>
-        </main>
-      </div>
+        <section id="tai-lieu">
+          <h2>Nguồn tham khảo</h2>
+          <ul>
+            <li>Giáo trình Những nguyên lý cơ bản của Chủ nghĩa Mác – Lênin (phần Lý luận nhận thức).</li>
+            <li>V.I. Lenin: <em>Bút ký triết học</em> – bàn về con đường và phương pháp nhận thức.</li>
+          </ul>
+        </section>
 
-      <div class="pager">
-        <a href="sai-lam.html">⬅ Sai lầm nhận thức</a>
-        <a href="nguon-goc.html">Nguồn gốc &amp; bản chất ➜</a>
-      </div>
+        <hr class="hr-soft" />
+        <a href="index.html" class="btn-primary">⬅ Quay lại</a>
+      </main>
     </div>
-  </section>
+
+    <div class="pager">
+      <a href="sai-lam.html">⬅ Sai lầm trong nhận thức</a>
+      <a href="nguon-goc.html">Nguồn gốc &amp; đặc trưng ➜</a>
+    </div>
+  </div>
+</section>
+
   
 <!-- ĐÚNG (để Vite bundle) -->
 <script type="module" src="/src/assets/js/main.js"></script>
