--- a/nguon-goc.html
+++ b/nguon-goc.html
@@ -18,60 +18,74 @@
     </div>
   </header>
 
-  <section class="hero-mini">
-    <div class="container">
-      <div class="banner"><div class="overlay"></div><div class="title">Nguồn gốc &amp; bản chất nhận thức</div></div>
-      <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Nguồn gốc &amp; bản chất</div>
+ <section class="hero-mini">
+  <div class="container">
+    <div class="banner"><div class="overlay"></div><div class="title">Cội nguồn &amp; đặc trưng của nhận thức</div></div>
+    <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Cội nguồn &amp; đặc trưng</div>
 
-      <div class="detail-layout">
-        <aside class="toc">
-          <h4>Nội dung</h4>
-          <a href="#nguon-goc">Nguồn gốc xã hội – lịch sử</a>
-          <a href="#ban-chat">Bản chất phản ánh sáng tạo</a>
-          <a href="#tinh-lich-su">Tính lịch sử – xã hội</a>
-          <a href="#y-nghia">Ý nghĩa phương pháp luận</a>
-        </aside>
+    <div class="detail-layout">
+      <aside class="toc">
+        <h4>Nội dung</h4>
+        <a href="#nguon-goc">Căn nguyên xã hội – lịch sử</a>
+        <a href="#ban-chat">Tính phản ánh mang tính sáng tạo</a>
+        <a href="#tinh-lich-su">Dấu ấn lịch sử – xã hội</a>
+        <a href="#y-nghia">Giá trị phương pháp luận</a>
+      </aside>
 
-        <main class="prose">
-          <section id="nguon-goc">
-            <h2>Nguồn gốc xã hội – lịch sử</h2>
-            <ul>
-              <li><strong>Lao động:</strong> phối hợp tay–óc làm nảy sinh nhu cầu tư duy trừu tượng, dự kiến, lập kế hoạch.</li>
-              <li><strong>Ngôn ngữ:</strong> “vật chất hoá” tư duy; cho phép tích luỹ và truyền thụ tri thức liên thế hệ.</li>
-              <li><strong>Giao tiếp – cộng đồng:</strong> hình thành chuẩn mực kiểm chứng, phản biện đồng đẳng.</li>
-            </ul>
-          </section>
+      <main class="prose">
+        <section id="nguon-goc">
+          <h2>Căn nguyên xã hội – lịch sử</h2>
+          <ul>
+            <li><strong>Hoạt động lao động:</strong> sự kết hợp giữa thao tác thực tiễn và tư duy làm xuất hiện khả năng
+              dự đoán, trừu tượng hoá và lập kế hoạch.</li>
+            <li><strong>Ngôn ngữ:</strong> phương tiện vật chất của tư duy, giúp lưu giữ, hệ thống hoá và truyền đạt tri
+              thức giữa các thế hệ.</li>
+            <li><strong>Sự tương tác xã hội:</strong> tạo nên môi trường trao đổi, phản biện và xác lập chuẩn mực đánh
+              giá tri thức.</li>
+          </ul>
+        </section>
 
-          <section id="ban-chat">
-            <h2>Bản chất phản ánh sáng tạo</h2>
-            <p>Nhận thức là <strong>phản ánh tích cực</strong> của hiện thực khách quan trong bộ óc con người. Chủ thể lựa chọn, trừu tượng hoá, khái quát bản chất để tạo mô hình về thế giới. Vì thế tri thức vừa mang tính <em>khách quan</em> (phản ánh hiện thực), vừa mang tính <em>chủ quan</em> (gắn với mục đích, phương pháp, ngôn ngữ).</p>
-            <div class="callout"><div class="hd">Kết luận</div>Tri thức đúng đắn luôn mở – được bổ sung, chỉnh lý khi thực tiễn và trình độ khoa học phát triển.</div>
-          </section>
+        <section id="ban-chat">
+          <h2>Tính phản ánh mang tính sáng tạo</h2>
+          <p>Nhận thức là quá trình <strong>phản ánh chủ động</strong> hiện thực khách quan vào tư duy con người. Trong
+            quá trình đó, chủ thể không chỉ tiếp nhận mà còn chọn lọc, khái quát và xây dựng mô hình lý giải thế giới.
+            Vì vậy, tri thức vừa mang tính <em>khách quan</em> do bắt nguồn từ hiện thực, vừa mang dấu ấn <em>chủ quan</em>
+            gắn với mục tiêu, phương pháp và bối cảnh nhận thức.</p>
+          <div class="callout">
+            <div class="hd">Kết luận</div>
+            Nhận thức khoa học không khép kín mà luôn vận động, được điều chỉnh và hoàn thiện cùng sự phát triển của
+            thực tiễn.
+          </div>
+        </section>
 
-          <section id="tinh-lich-su">
-            <h2>Tính lịch sử – xã hội</h2>
-            <p>Mỗi hệ tri thức mang dấu ấn thời đại: điều kiện vật chất, công cụ kỹ thuật, nhu cầu xã hội, hệ giá trị. Điều này lý giải vì sao nhiều lý thuyết được mở rộng hoặc thay thế khi bối cảnh biến đổi.</p>
-          </section>
+        <section id="tinh-lich-su">
+          <h2>Dấu ấn lịch sử – xã hội</h2>
+          <p>Mọi hệ thống tri thức đều phản ánh điều kiện của một giai đoạn lịch sử nhất định, bao gồm trình độ sản
+            xuất, công nghệ, nhu cầu xã hội và hệ giá trị chi phối. Do đó, nhiều học thuyết được mở rộng, điều chỉnh
+            hoặc thay thế khi bối cảnh lịch sử thay đổi.</p>
+        </section>
 
-          <section id="y-nghia">
-            <h2>Ý nghĩa phương pháp luận</h2>
-            <ul>
-              <li>Kết hợp lao động – ngôn ngữ – giao tiếp trong dạy học &amp; nghiên cứu.</li>
-              <li>Chú trọng thực nghiệm, dữ liệu; khuyến khích phản biện khoa học.</li>
-              <li>Nhìn nhận tri thức như hệ mở, tránh tuyệt đối hoá một mô hình.</li>
-            </ul>
-          </section>
-          <hr class="hr-soft" />
-          <a href="index.html" class="btn-primary">⬅ Quay lại</a>
-        </main>
-      </div>
+        <section id="y-nghia">
+          <h2>Giá trị phương pháp luận</h2>
+          <ul>
+            <li>Gắn kết chặt chẽ giữa hoạt động thực tiễn, ngôn ngữ và giao tiếp trong học tập và nghiên cứu.</li>
+            <li>Đề cao vai trò của thực nghiệm, dữ liệu và tranh luận khoa học.</li>
+            <li>Xem tri thức như một hệ thống mở, tránh tuyệt đối hoá bất kỳ mô hình hay lý thuyết nào.</li>
+          </ul>
+        </section>
 
-      <div class="pager">
-        <a href="khai-niem.html">⬅ Khái niệm nhận thức</a>
-        <a href="vai-tro-thuc-tien.html">Vai trò của thực tiễn ➜</a>
-      </div>
+        <hr class="hr-soft" />
+        <a href="index.html" class="btn-primary">⬅ Quay lại</a>
+      </main>
     </div>
-  </section>
+
+    <div class="pager">
+      <a href="khai-niem.html">⬅ Khái niệm về nhận thức</a>
+      <a href="vai-tro-thuc-tien.html">Vai trò của thực tiễn ➜</a>
+    </div>
+  </div>
+</section>
+
 
 <!-- ĐÚNG (để Vite bundle) -->
 <script type="module" src="/src/assets/js/main.js"></script>
