--- a/sai-lam.html
+++ b/sai-lam.html
@@ -18,55 +18,63 @@
     </div>
   </header>
 
-  <section class="hero-mini">
-    <div class="container">
-      <div class="banner"><div class="overlay"></div><div class="title">Sai lầm nhận thức</div></div>
-      <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Sai lầm nhận thức</div>
+ <section class="hero-mini">
+  <div class="container">
+    <div class="banner"><div class="overlay"></div><div class="title">Những sai lệch trong nhận thức</div></div>
+    <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Những sai lệch trong nhận thức</div>
 
-      <div class="detail-layout">
-        <aside class="toc">
-          <h4>Nội dung</h4>
-          <a href="#chu-quan">Chủ quan, duy ý chí</a>
-          <a href="#kinh-nghiem">Kinh nghiệm luận hẹp hòi</a>
-          <a href="#giao-dieu">Giáo điều</a>
-          <a href="#phong-ngua">Nguyên tắc phòng ngừa</a>
-        </aside>
+    <div class="detail-layout">
+      <aside class="toc">
+        <h4>Nội dung</h4>
+        <a href="#chu-quan">Tính chủ quan và duy ý chí</a>
+        <a href="#kinh-nghiem">Kinh nghiệm luận phiến diện</a>
+        <a href="#giao-dieu">Tư duy giáo điều</a>
+        <a href="#phong-ngua">Nguyên tắc khắc phục</a>
+      </aside>
 
-        <main class="prose">
-          <section id="chu-quan">
-            <h2>Chủ quan, duy ý chí</h2>
-            <p>Áp đặt mong muốn lên hiện thực, chọn lọc dữ kiện theo định kiến (confirmation bias). Khắc phục: kiểm soát thiên lệch nhận thức, thiết kế quan sát/đo đạc độc lập, chấp nhận kết quả trái kỳ vọng.</p>
-          </section>
+      <main class="prose">
+        <section id="chu-quan">
+          <h2>Tính chủ quan và duy ý chí</h2>
+          <p>Xuất phát từ mong muốn cá nhân để đánh giá hiện thực, chỉ chú ý đến những dữ kiện phù hợp với định kiến sẵn
+            có và bỏ qua các thông tin trái chiều. Cách khắc phục là nhận diện các thiên lệch nhận thức, tổ chức quan
+            sát và đo lường khách quan, sẵn sàng chấp nhận kết quả không đúng với kỳ vọng ban đầu.</p>
+        </section>
 
-          <section id="kinh-nghiem">
-            <h2>Kinh nghiệm luận hẹp hòi</h2>
-            <p>Tuyệt đối hoá trải nghiệm cá nhân; từ “thấy vậy” suy ra bản chất mà thiếu khái quát khoa học. Cần chuyển từ mô tả cảm tính sang xây dựng khái niệm, mô hình và kiểm chứng.</p>
-          </section>
+        <section id="kinh-nghiem">
+          <h2>Kinh nghiệm luận phiến diện</h2>
+          <p>Tuyệt đối hoá trải nghiệm cá nhân, từ hiện tượng bề ngoài suy ra bản chất mà không thông qua quá trình
+            khái quát và phân tích khoa học. Để vượt qua hạn chế này, cần chuyển từ mô tả cảm tính sang xây dựng khái
+            niệm, mô hình lý luận và tiến hành kiểm chứng bằng thực tiễn.</p>
+        </section>
 
-          <section id="giao-dieu">
-            <h2>Giáo điều</h2>
-            <p>Sao chép máy móc kết luận sẵn có, coi lý thuyết là bất biến. Biện pháp: đặt vấn đề trong bối cảnh lịch sử–cụ thể, mở rộng điều kiện kiểm nghiệm, cập nhật trước phát hiện mới.</p>
-          </section>
+        <section id="giao-dieu">
+          <h2>Tư duy giáo điều</h2>
+          <p>Xem các kết luận và lý thuyết có sẵn như chân lý bất biến, áp dụng máy móc vào mọi hoàn cảnh. Biện pháp cần
+            thiết là đặt tri thức trong điều kiện lịch sử – cụ thể, mở rộng phạm vi kiểm nghiệm và thường xuyên cập
+            nhật trước những phát hiện mới của khoa học.</p>
+        </section>
 
-          <section id="phong-ngua">
-            <h2>Nguyên tắc phòng ngừa</h2>
-            <ul>
-              <li>Thực tiễn là tiêu chuẩn kiểm tra tri thức.</li>
-              <li>Minh bạch phương pháp, chia sẻ dữ liệu, khuyến khích phản biện đồng đẳng.</li>
-              <li>Bồi dưỡng tư duy phản biện và đạo đức học thuật.</li>
-            </ul>
-          </section>
-          <hr class="hr-soft" />
-          <a href="index.html" class="btn-primary">⬅ Quay lại</a>
-        </main>
-      </div>
+        <section id="phong-ngua">
+          <h2>Nguyên tắc khắc phục</h2>
+          <ul>
+            <li>Lấy thực tiễn làm tiêu chuẩn khách quan để đánh giá tính đúng đắn của tri thức.</li>
+            <li>Đảm bảo minh bạch phương pháp nghiên cứu, chia sẻ dữ liệu và khuyến khích phản biện khoa học.</li>
+            <li>Rèn luyện tư duy phản biện gắn với trách nhiệm và đạo đức học thuật.</li>
+          </ul>
+        </section>
 
-      <div class="pager">
-        <a href="cac-cap-do.html">⬅ Các cấp độ nhận thức</a>
-        <a href="khai-niem.html">Khái niệm nhận thức ➜</a>
-      </div>
+        <hr class="hr-soft" />
+        <a href="index.html" class="btn-primary">⬅ Quay lại</a>
+      </main>
     </div>
-  </section>
+
+    <div class="pager">
+      <a href="cac-cap-do.html">⬅ Các cấp độ nhận thức</a>
+      <a href="khai-niem.html">Khái niệm về nhận thức ➜</a>
+    </div>
+  </div>
+</section>
+
 
 <!-- ĐÚNG (để Vite bundle) -->
 <script type="module" src="/src/assets/js/main.js"></script>
