--- a/vai-tro-thuc-tien.html
+++ b/vai-tro-thuc-tien.html
@@ -18,56 +18,69 @@
     </div>
   </header>
 
-  <section class="hero-mini">
-    <div class="container">
-      <div class="banner"><div class="overlay"></div><div class="title">Vai trò của thực tiễn</div></div>
-      <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Vai trò của thực tiễn</div>
+<section class="hero-mini">
+  <div class="container">
+    <div class="banner"><div class="overlay"></div><div class="title">Ý nghĩa của thực tiễn</div></div>
+    <div class="breadcrumb"><a href="index.html">Trang chủ</a> <span>›</span> Ý nghĩa của thực tiễn</div>
 
-      <div class="detail-layout">
-        <aside class="toc">
-          <h4>Nội dung</h4>
-          <a href="#dong-luc">Động lực – mục đích</a>
-          <a href="#tieu-chuan">Tiêu chuẩn chân lý</a>
-          <a href="#phuong-phap">Ý nghĩa phương pháp luận</a>
-          <a href="#vi-du">Ví dụ ứng dụng</a>
-        </aside>
+    <div class="detail-layout">
+      <aside class="toc">
+        <h4>Nội dung</h4>
+        <a href="#dong-luc">Nguồn thúc đẩy và định hướng</a>
+        <a href="#tieu-chuan">Thước đo của chân lý</a>
+        <a href="#phuong-phap">Giá trị phương pháp luận</a>
+        <a href="#vi-du">Minh hoạ thực tiễn</a>
+      </aside>
 
-        <main class="prose">
-          <section id="dong-luc">
-            <h2>Động lực – mục đích</h2>
-            <p>Vấn đề do thực tiễn đặt ra (sản xuất, quản trị, y tế, giáo dục…) buộc con người phải nhận thức để giải quyết. Tri thức ra đời <strong>vì</strong> thực tiễn và <strong>cho</strong> thực tiễn; đây là nguồn gốc và mục đích trực tiếp của nhận thức.</p>
-          </section>
+      <main class="prose">
+        <section id="dong-luc">
+          <h2>Nguồn thúc đẩy và định hướng</h2>
+          <p>Các yêu cầu nảy sinh từ đời sống thực tiễn như sản xuất, quản lý, chăm sóc sức khoẻ hay giáo dục đặt ra
+            những vấn đề buộc con người phải nhận thức để giải quyết. Tri thức hình thành <strong>từ</strong> thực tiễn
+            và hướng tới <strong>phục vụ</strong> thực tiễn; đây chính là động lực trực tiếp và mục đích cuối cùng của
+            hoạt động nhận thức.</p>
+        </section>
 
-          <section id="tieu-chuan">
-            <h2>Thực tiễn là tiêu chuẩn của chân lý</h2>
-            <p>Giả thuyết/kết luận chỉ trở thành chân lý khi được kiểm nghiệm thành công trong điều kiện lịch sử – cụ thể. Một chứng minh thuần lý chưa đủ; cần <strong>tính hiệu lực thực tiễn</strong> và khả năng lặp lại.</p>
-            <div class="callout info"><div class="hd">Lưu ý</div>Kiểm nghiệm mang tính mở rộng: phạm vi điều kiện càng lớn, độ tin cậy càng cao; song vẫn phải sẵn sàng điều chỉnh trước dữ kiện mới.</div>
-          </section>
+        <section id="tieu-chuan">
+          <h2>Thước đo của chân lý</h2>
+          <p>Một giả thuyết hay kết luận chỉ được thừa nhận là đúng khi được kiểm nghiệm thành công trong những điều kiện
+            lịch sử – cụ thể. Lập luận thuần lý là chưa đủ; tri thức cần chứng tỏ <strong>hiệu quả trong thực tế</strong>
+            và khả năng tái hiện kết quả.</p>
+          <div class="callout info">
+            <div class="hd">Lưu ý</div>
+            Quá trình kiểm nghiệm luôn mang tính mở: phạm vi điều kiện áp dụng càng rộng thì mức độ tin cậy càng cao,
+            song tri thức vẫn phải sẵn sàng điều chỉnh trước những dữ kiện mới.
+          </div>
+        </section>
 
-          <section id="phuong-phap">
-            <h2>Ý nghĩa phương pháp luận</h2>
-            <ul>
-              <li>Tổ chức chu trình <em>quan sát → giả thuyết → thí nghiệm → ứng dụng</em>.</li>
-              <li>Ưu tiên dữ liệu thực địa, đánh giá sai số, tái lập kết quả.</li>
-              <li>Phản hồi nhanh từ hiện trường để cải tiến mô hình, công nghệ.</li>
-            </ul>
-          </section>
+        <section id="phuong-phap">
+          <h2>Giá trị phương pháp luận</h2>
+          <ul>
+            <li>Tổ chức nhận thức theo chu trình <em>quan sát → hình thành giả thuyết → thử nghiệm → ứng dụng</em>.</li>
+            <li>Đề cao dữ liệu thực tế, phân tích sai số và khả năng tái lập kết quả.</li>
+            <li>Khai thác phản hồi từ thực tiễn để liên tục cải tiến mô hình và giải pháp.</li>
+          </ul>
+        </section>
 
-          <section id="vi-du">
-            <h2>Ví dụ ứng dụng</h2>
-            <p>Mô hình dự báo lưu lượng giao thông được xem là đúng khi dự đoán sát số liệu thực tế trong nhiều bối cảnh (giờ cao điểm, mưa lớn…). Kết quả giúp tối ưu đèn tín hiệu và lộ trình.</p>
-          </section>
-          <hr class="hr-soft" />
-          <a href="index.html" class="btn-primary">⬅ Quay lại</a>
-        </main>
-      </div>
+        <section id="vi-du">
+          <h2>Minh hoạ thực tiễn</h2>
+          <p>Một mô hình dự báo lưu lượng giao thông chỉ được coi là đáng tin cậy khi cho kết quả sát với số liệu thu
+            thập trong nhiều điều kiện khác nhau như giờ cao điểm hay thời tiết bất lợi. Trên cơ sở đó, hệ thống điều
+            khiển đèn tín hiệu và phương án phân luồng được tối ưu hoá.</p>
+        </section>
 
-      <div class="pager">
-        <a href="nguon-goc.html">⬅ Nguồn gốc &amp; bản chất</a>
-        <a href="cac-cap-do.html">Các cấp độ nhận thức ➜</a>
-      </div>
+        <hr class="hr-soft" />
+        <a href="index.html" class="btn-primary">⬅ Quay lại</a>
+      </main>
     </div>
-  </section>
+
+    <div class="pager">
+      <a href="nguon-goc.html">⬅ Cội nguồn &amp; đặc trưng</a>
+      <a href="cac-cap-do.html">Những tầng bậc của nhận thức ➜</a>
+    </div>
+  </div>
+</section>
+
 
 <!-- ĐÚNG (để Vite bundle) -->
 <script type="module" src="/src/assets/js/main.js"></script>
